[package]
name = "eve-gql"
version = "0.1.0"
authors = ["Darius Bakunas-Milanowski <bakunas@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0-rc"
base64 = "0.10.1"
dotenv = "0.14.1"
juniper = "0.12.0"
futures = "0.1.27"
log = "0.4.6"
serde = "1.0.91"
serde_json = "1.0.39"
serde_derive = "1.0.91"
env_logger = "0.6.1"
diesel = { version = "1.4.2", features = ["mysql"] }
r2d2 = "0.8.4"
r2d2-diesel = "1.0.0"
reqwest = "0.9.17"
error-chain = "0.12.1"